# cloud-init-rs

./: .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  LICENSE  README.md  ROADMAP.md  codecov.yml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: audit.yml  ci.yml  coverage.yml  packages.yml  release.yml
debian/: changelog  postinst  postrm  prerm
scripts/: generate-changelog.sh
src/: error.rs  lib.rs  main.rs
src/config/: loader.rs  merge.rs  mod.rs
src/datasources/: azure.rs  ec2.rs  gce.rs  mock.rs  mod.rs  nocloud.rs  openstack.rs
src/modules/: apt.rs  bootcmd.rs  disk_setup.rs  fs_setup.rs  groups.rs  growpart.rs  hostname.rs  keyboard.rs  locale.rs  mod.rs  mounts.rs  ntp.rs  package_update.rs  package_upgrade.rs  packages.rs  resize_rootfs.rs  rh_subscription.rs  runcmd.rs  snap.rs  ssh_keys.rs  timezone.rs  users.rs  write_files.rs  yum_add_repo.rs  yum_repos.rs  zypper_add_repo.rs  zypper_configure.rs
src/network/: mod.rs  v1.rs
src/network/render/: eni.rs  mod.rs  network_manager.rs  networkd.rs
src/stages/: config.rs  final_stage.rs  local.rs  mod.rs  network.rs
src/state/: mod.rs  paths.rs  semaphore.rs
src/template/: context.rs  mod.rs
src/userdata/: mime.rs  mod.rs  types.rs
systemd/: cloud-config.service  cloud-final.service  cloud-init-local.service  cloud-init.service
tests/: datasource_tests.rs  ec2_integration.rs  module_tests.rs  nocloud_integration.rs
tests/fixtures/: apt.yaml  basic.yaml  comments_only.yaml  disk_setup.yaml  full.yaml  mounts.yaml  packages.yaml  runcmd.yaml  snap.yaml  users.yaml  write_files.yaml  zypper.yaml
