[package]
name = "cloud-init-rs"
version = "0.1.0"
edition = "2024"
rust-version = "1.88"
authors = ["cloud-init-rs contributors"]
description = "A safe Rust implementation of cloud-init focused on fast boot times"
license = "Apache-2.0"
repository = "https://github.com/your-org/cloud-init-rs"
keywords = ["cloud-init", "cloud", "provisioning", "infrastructure"]
categories = ["command-line-utilities", "config"]

# Enforce no unsafe code
[lints.rust]
unsafe_code = "forbid"

[dependencies]
# Async runtime
tokio = { version = "1", features = ["rt", "rt-multi-thread", "fs", "io-util", "process", "sync", "time", "macros"] }

# Serialization for cloud-config YAML and JSON metadata
serde = { version = "1", features = ["derive"] }
serde_yaml = "0.9"
serde_json = "1"

# Error handling
thiserror = "2"
anyhow = "1"

# Logging and tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# HTTP client for cloud metadata services (rustls for safety, no OpenSSL)
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "charset"] }

# Command line parsing
clap = { version = "4", features = ["derive", "env"] }

# Base64 for userdata decoding
base64 = "0.22"

# Gzip decompression for compressed userdata
flate2 = "1"

# Async trait support (needed for dyn-compatible async traits)
async-trait = "0.1"

# MIME multipart parsing for cloud-init multipart userdata
multipart = { version = "0.18", default-features = false, features = ["server"] }

# Jinja2-compatible templating for cloud-init templates
minijinja = "2"

[dev-dependencies]
tokio-test = "0.4"
tempfile = "3"
wiremock = "0.6"

[profile.release]
lto = true
codegen-units = 1
strip = true
panic = "abort"

[[bin]]
name = "cloud-init-rs"
path = "src/main.rs"

# Debian package metadata (cargo-deb)
[package.metadata.deb]
maintainer = "cloud-init-rs contributors"
depends = ""
section = "admin"
priority = "optional"
assets = [
    ["target/release/cloud-init-rs", "usr/bin/", "755"],
    ["systemd/cloud-init-local.service", "lib/systemd/system/", "644"],
    ["systemd/cloud-init.service", "lib/systemd/system/", "644"],
    ["systemd/cloud-config.service", "lib/systemd/system/", "644"],
    ["systemd/cloud-final.service", "lib/systemd/system/", "644"],
    ["systemd/cloud-init.target", "lib/systemd/system/", "644"],
    ["README.md", "usr/share/doc/cloud-init-rs/", "644"],
    ["LICENSE", "usr/share/doc/cloud-init-rs/", "644"],
]
maintainer-scripts = "debian/"
systemd-units = { enable = false }

# RPM package metadata (cargo-generate-rpm)
[package.metadata.generate-rpm]
assets = [
    { source = "target/release/cloud-init-rs", dest = "/usr/bin/cloud-init-rs", mode = "755" },
    { source = "systemd/cloud-init-local.service", dest = "/usr/lib/systemd/system/cloud-init-local.service", mode = "644" },
    { source = "systemd/cloud-init.service", dest = "/usr/lib/systemd/system/cloud-init.service", mode = "644" },
    { source = "systemd/cloud-config.service", dest = "/usr/lib/systemd/system/cloud-config.service", mode = "644" },
    { source = "systemd/cloud-final.service", dest = "/usr/lib/systemd/system/cloud-final.service", mode = "644" },
    { source = "systemd/cloud-init.target", dest = "/usr/lib/systemd/system/cloud-init.target", mode = "644" },
    { source = "README.md", dest = "/usr/share/doc/cloud-init-rs/README.md", mode = "644" },
    { source = "LICENSE", dest = "/usr/share/doc/cloud-init-rs/LICENSE", mode = "644" },
]
[package.metadata.generate-rpm.requires]
